# kovault-backend

./: .gitignore  README.md  THIRD-PARTY-LICENSES
docker/: 01-schema.sql  02-init.sql  Dockerfile  docker-compose.yml  migrate_1.3.0.sql  migrate_1.3.1.sql
docker/secrets/: kovault_db_password.txt.example
embedding/: README.md  docker-compose.yml
mcp-server/: .dockerignore  Dockerfile  README.md  pyproject.toml
mcp-server/kovault_mcp/: __init__.py  blocks.py  config.py  db.py  edits.py  embed_worker.py  embedding.py  embedding_text.py  export.py  links.py  main.py  render.py  search.py  server.py  timestamps.py
mcp-server/tests/: test_blocks.py  test_embedding_text.py  test_export.py  test_links.py  test_normalize.py  test_render.py  test_search.py  test_timestamps.py
