[project]
name = "kovault-mcp"
version = "1.1.0"
description = "MCP server for Kovault — a knowledge vault; the only component that touches Postgres."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "psycopg[binary,pool]>=3.1",
    "httpx>=0.27",
]

[project.scripts]
kovault-mcp = "kovault_mcp.main:main"
kovault-export = "kovault_mcp.export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kovault_mcp"]
